# GoodFon

./: GoodFon.sln  GoodfonParser.sln  LICENSE  README.md  WindowsFormsApplication1.sln
GoodFon/: Form1.Designer.cs  Form1.cs  GoodFon.csproj
GoodFon/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
GoodfonParser/: Form1.Designer.cs  Form1.cs  GoodfonParser.csproj  Program.cs
GoodfonParser/FakesAssemblies/: HtmlAgilityPack.1.4.6.0.Fakes.messages  HtmlAgilityPack.1.4.6.0.Fakes.xml
GoodfonParser/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
WindowsFormsApplication1/: Form1.resx  Program.cs  WindowsFormsApplication1.csproj
WindowsFormsApplication1/Properties/: Resources.Designer.cs  Settings.Designer.cs
src/: CMakeLists.txt  main.c  resource.h  resource.rc
